tests/good/typing/013-ge-int-int.clap
val x = (48 >= 42)

