tests/bad/lexical/071-if-5.clap
val x = 
  if True then (if False then U) U
 
